<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Maxcare</string>
    <string name="back_toast">Press again to exit</string>
    <string name="main_page">Main page</string>
    <string name="connected_to">Connected to</string>
    <string name="could_not_connect">Couldn\u0009 connect to the device!</string>
    <string name="connection_lost">Device connection was lost!</string>
    <string name="slogan">RK-8900</string>
    <string name="support">"Service
Center"</string>
    <string name="story">"Brand
Story"</string>
    <string name="experience">"Health
Care"</string>
    <string name="start">Start</string>
    <string name="speed_state">Speed:</string>
    <string name="width_state">Width:</string>
    <string name="strength_state">Strength:</string>
    <string name="strength_low">weak</string>
    <string name="strength_middle">Middle</string>
    <string name="strength_high">Strong</string>
    <string name="state_timer">Timer:</string>
    <string name="state_mode">Mode：</string>
    <string name="auto_shoulder">Automatic detection of shoulder height</string>
    <string name="manual_shoulder">manual shoulder height adjust</string>
    <string name="increase_c">Raise temp</string>
    <string name="decrease_c">Reduce temp</string>
    <string name="temp_display">Function of heat is not turned</string>
    <string name="preheating">Function of Preheat is turned</string>
    <string name="send">Send</string>
    <string name="communication_failed">communication_failed</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving App.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_not_connected">not connected</string>
    <string name="not_available">Bluetooth is not available</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>
    <string name="secure_connect">Connect</string>
    <string name="settings">Settings</string>
    <string name="service">Service</string>
    <string name="position_adjust">Position Adjust</string>
    <string name="power">On/Off</string>
    <string name="stop">Emergency Off</string>
    <string name="auto_massage">Auto</string>
    <string name="manual_massage">Manual</string>
    <string name="holographic_hand_massage">Air pressure</string>
    <string name="other_massage">Other</string>
    <string name="power_off_message">Massage chairs are being shut down</string>
    <string name="status">status</string>
    <string name="zyys">Recovery</string>
    <string name="sthh">Pain relief</string>
    <string name="jgsz">Stretch</string>
    <string name="qnty">Experience</string>
    <string name="xyfs">Relax</string>
    <string name="xsbj">Health care</string>
    <string name="ylam">Rhythm sync</string>
    <string name="blsbz">White-collar</string>
    <string name="gwdr">Shopaholic</string>
    <string name="yjkb">Back yoga</string>
    <string name="ydyms">Athlete mode</string>
    <string name="ysbj">Care of aged</string>
    <string name="mode">Mode</string>
    <string name="part">Position</string>
    <string name="width">Width</string>
    <string name="speed">Speed</string>
    <string name="threeD">3 D</string>
    <string name="knead">Knead</string>
    <string name="rap">Tap</string>
    <string name="pat">Knock</string>
    <string name="knead_knock">Knead+tap</string>
    <string name="finger">Shiatsu</string>
    <string name="whole">Whole</string>
    <string name="local">Local</string>
    <string name="fixed_point">Point</string>
    <string name="up">Upward</string>
    <string name="down">Downward</string>
    <string name="narrow_center_wide">"N
M
W"</string>
    <string name="wide">Wide</string>
    <string name="center">Middle</string>
    <string name="narrow">Narrow</string>
    <string name="low_middle_high">"L
M
H"</string>
    <string name="higher">Fast</string>
    <string name="middle">Middle</string>
    <string name="lower">Slow</string>
    <string name="strengthen_weaken">"S
W"</string>
    <string name="strengthen">Strong</string>
    <string name="weaken">Weak</string>
    <string name="threeDstrengthen">3D Strong</string>
    <string name="threeDweaken">3D Weak</string>
    <string name="all">Full Body</string>
    <string name="strengthen_middle_weaken">"S
M
W"</string>
    <string name="strength">strength</string>
    <string name="hand_shoulder">Uper Body</string>
    <string name="waist">Waist&amp;Back</string>
    <string name="leg_foot">Leg&amp;foot</string>
    <string name="pressure_strength">Pressure strength</string>
    <string name="state_width">   Width </string>
    <string name="state_strength">   Strength </string>
    <string name="state_speed"> Speed</string>
    <string name="state_pedicure"> Foot Roller</string>
    <string name="pedicure">Roller</string>
    <string name="thermal_method">Heat</string>
    <string name="thermal_heart">Motion thermal</string>
    <string name="thermal_foot">Thermal feet</string>
    <string name="physiology_test">Heart rate detection</string>
    <string name="fast_soft">"S
F"</string>
    <string name="fast">Fast</string>
    <string name="soft">Slow</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="vol_increase">Vol+</string>
    <string name="vol_decrease">Vol-</string>
    <string name="install_duomi">Please install duomi music first</string>
    <string name="upgrade">Update</string>
    <string name="help">Help</string>
    <string name="current_version">Ver:</string>
    <string name="is_latest_version">This is the latest version.</string>
    <string name="found_new_version">There is an new vesion,please update now.</string>
    <string name="language">Language</string>
    <string name="chinese">中文</string>
    <string name="english">ENGLISH</string>
    <string name="korean">한국어</string>
    <string name="timer_0"><u>10min</u></string>
    <string name="timer_1">20min</string>
    <string name="timer_2">30min</string>
    <string name="timer">Time</string>
    <string name="music">Music</string>
    <string name="touch_sound">Touch sound</string>
    <string name="colored_light">Colore lamp</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wlan">WLAN</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="wlan_not_connected">WLAN is not connected</string>
</resources>
