<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/hd_splash_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/layout_top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <ImageView android:id="@id/iv_top" android:background="@drawable/main_top" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <ImageView android:id="@id/imageView1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:src="@drawable/main_logo_en" android:layout_alignBottom="@id/iv_top" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/layout_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <ImageView android:id="@id/iv_bottom" android:background="@drawable/main_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <Button android:textSize="@dimen/fudong_text_size" android:textColor="#ff238e23" android:id="@id/btn_start" android:background="@drawable/main_start_button_background" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start" android:layout_alignBottom="@id/iv_bottom" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout android:gravity="center_horizontal" android:id="@id/layout_chairs" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/layout_top">
        <FrameLayout android:id="@id/layout_chair" android:background="@drawable/main_chair_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <ImageSwitcher android:id="@id/is_chairs" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
        <TextView android:textSize="32.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:text="@string/slogan" android:layout_below="@id/layout_chair" android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <RelativeLayout android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="168.0dip" android:layout_marginTop="-10.0dip" android:layout_above="@id/layout_bottom" android:layout_below="@id/layout_chairs">
        <ImageView android:id="@id/iv_line" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/main_line" android:scaleType="center" />
        <Button android:textSize="@dimen/fudong_text_size" android:id="@id/btn_service_center" android:background="@drawable/main_service" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="10.0dip" android:text="@string/support" android:layout_alignTop="@id/iv_line" />
        <Button android:textSize="@dimen/fudong_text_size" android:id="@id/btn_brand_story" android:background="@drawable/main_brandstory" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/story" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
        <Button android:textSize="@dimen/fudong_text_size" android:id="@id/btn_health_care" android:background="@drawable/main_healthecare" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginRight="30.0dip" android:text="@string/experience" android:layout_alignTop="@id/iv_line" android:layout_alignParentRight="true" />
    </RelativeLayout>
</RelativeLayout>